fix some spacing and sizing of the community edit modal

--- a/src/community/edit/Modal.css
+++ b/src/community/edit/Modal.css
@@ -8,7 +8,7 @@
 	border-bottom: 1px solid var(--border-grey-light);
 	display: flex;
 	align-items: center;
-	padding: 0.25rem 0 0.25rem 1rem;
+	padding: 0.25rem 0 0.25rem 1.5rem;
 	background: var(--panel-background);
 }
 
